--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body onload="">
 <!-- Background Music -->
 <audio autoplay id="bg_music">
-    <source src="media/bg.mp3" type="audio/mpeg"/>
+    <source src="media/bg_music2.mp3" type="audio/mpeg"/>
 </audio>
 <!-- Nav Bar-->
     <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
