--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 </head>
 <body onload="">
 <!-- Background Music -->
-
+<audio autoplay>
+  <source src="media/bg.mp3" type="audio/mpeg"></source>
+</audio>
 <!-- Nav Bar-->
     <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
         <div class="container-fluid">
