--- a/index.html
+++ b/index.html
@@ -297,11 +297,12 @@
         </div>
         <div class="col-md-4">
           <hr class="light">
-          <h5>Our hours</h5>
+          <h5>Founders</h5>
           <hr class="light">
-          <p>Monday: 9am - 5pm</p>
-          <p>Saturday: 10am - 4pm</p>
-          <p>Sunday: closed</p>
+          <p>Kenneth San Juan Orilla</p>
+          <p>Warren Notario</p>
+          <p>Jeric Agawin Manuel</p>
+          <p>Von Christian Gutierrez</p>
         </div>
         <div class="col-12">
             <hr class="light-100">
