Change Footer Content

--- a/index.html
+++ b/index.html
@@ -280,10 +280,10 @@
         <div class="col-md-4">
           <img src="images/logo.png"
           <hr class="light">
-          <p>525525</p>
-          <p>525525</p>
-          <p>525525</p>
-          <p>525525</p>
+          <p>We are located at:</p>
+          <p>Tokyo, Tokyo, Arigatou</p>
+          <p>Beside Mang Inasal</p>
+          <p>and Jollibee</p>
 
         </div>
         <div class="col-md-4">
