--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 <footer>
     <div class="container-fluid " id="contact">
       <div class="row text-center ">
-        <div class="col-md-4">
+        <div class="col-md-3">
           <img src="images/logo.png"
           <hr class="light">
           <p>We are located at:</p>
@@ -286,7 +286,7 @@
           <p>and Jollibee</p>
 
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
           <hr class="light">
           <h5>Our hours</h5>
           <hr class="light">
@@ -295,7 +295,7 @@
           <p>Sunday: closed</p>
 
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
           <hr class="light">
           <h5>Founders</h5>
           <hr class="light">
@@ -304,6 +304,16 @@
           <p>Jeric Agawin Manuel</p>
           <p>Von Christian Gutierrez</p>
         </div>
+        <div class="col-md-3">
+          <hr class="light">
+          <h5>Founders</h5>
+          <hr class="light">
+          <p>Kenneth San Juan Orilla</p>
+          <p>Warren Notario</p>
+          <p>Jeric Agawin Manuel</p>
+          <p>Von Christian Gutierrez</p>
+        </div>
+
         <div class="col-12">
             <hr class="light-100">
             <h5>&copy; KUMA KUMA CAFE </h5>
