added service area in footer

--- a/index.html
+++ b/index.html
@@ -306,12 +306,12 @@
         </div>
         <div class="col-md-3">
           <hr class="light">
-          <h5>Founders</h5>
+          <h5>Service Area</h5>
           <hr class="light">
-          <p>Kenneth San Juan Orilla</p>
-          <p>Warren Notario</p>
-          <p>Jeric Agawin Manuel</p>
-          <p>Von Christian Gutierrez</p>
+          <p>We Deliver Within:</p>
+          <p>Luzon</p>
+          <p>Visayas</p>
+          <p>and Mindanao</p>
         </div>
 
         <div class="col-12">
