redirect service button in navbar to footer

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <a href="#contact" class="nav-link">Contact Us</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#about" class="nav-link">Service</a>
+                        <a href="#contact" class="nav-link">Service</a>
                     </li>
 
                 </ul>
