added comment on top

--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!--- GROUP MEMBERS
+Kenneth San Juan Orilla
+Warren Notario
+Jeric Agawin Manuel
+Von Christian Gutierrez --->
+
 <!DOCTYPE html>
 <html>
 <head>
