--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="script/final.js" type="text/javascript"></script>
 
 
-    <title></title>
+    <title>Kuma Cafe!</title>
 </head>
 <body onload="">
 <!-- Background Music -->
