--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <link href="css/homepage.css" rel="stylesheet" type="text/css"/>
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     <script src="script/jquery-3.5.1.min.js"></script>
+    <script src="node_modules/slim-js/slim.js" type="text/javascript"></script>
     <script src="script/howler.js" type="text/javascript"></script>
     <script src="script/popper.min.js" type="text/javascript"></script>
     <script src="script/bootstrap.min.js" type="text/javascript"></script>
     <script src="script/all.js" type="text/javascript"></script>
     <script src="script/final.js" type="text/javascript"></script>
+
 
     <title>Kuma Cafe!</title>
 </head>
@@ -148,7 +150,7 @@
     </div>
 
     <hr>
-<!-------------- Coffee Section ----------->
+<!--- Coffee Section ----------->
  <div class="row welcome text-center">
     <div class="col-12">
         <h1 id="Menu">Coffee</h1>
@@ -188,7 +190,7 @@
         </div>
     </div>
 <hr>
-<!---------- Cupcake section---------------->
+<!--- Cupcake section---------------->
     <div class="row welcome text-center">
         <div class="col-12">
             <h1 id="Menu">Cupcakes</h1>
