--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="css/homepage.css" rel="stylesheet" type="text/css"/>
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     <script src="script/jquery-3.5.1.min.js"></script>
-    <script src="node_modules/slim-js/slim.js" type="text/javascript"></script>
+    <script src="script/Slim.js" type="text/javascript"></script>
     <script src="script/howler.js" type="text/javascript"></script>
     <script src="script/popper.min.js" type="text/javascript"></script>
     <script src="script/bootstrap.min.js" type="text/javascript"></script>
