--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="carousel-item active">
             <img src="images/cake1.jpg">
             <div class="carousel-caption">
-                <h1 class="display-1">KUMA TAE KA</h1>
+                <h1 class="display-1">KUMA CAFE</h1>
                 <h3>Wide Variety of Cakes, Coffee, Cupcakes & More...</h3>
             </div>
         </div>
