--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 <!--- Coffee Section ----------->
  <div class="row welcome text-center">
     <div class="col-12">
-        <h1 id="Menu">Coffees</h1>
+        <h1 id="Menu">Coffee</h1>
     </div>
 </div>
 
@@ -195,7 +195,7 @@
 <!--- Cupcake section---------------->
     <div class="row welcome text-center">
         <div class="col-12">
-            <h1 id="Menu">Cupcakeses</h1>
+            <h1 id="Menu">Cupcakes</h1>
         </div>
     </div>
 
