--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 <!--- Cupcake section---------------->
     <div class="row welcome text-center">
         <div class="col-12">
-            <h1 id="Menu">Cupcakesesee</h1>
+            <h1 id="Menu">Cupcakeseseee</h1>
         </div>
     </div>
 
