Change coffee sect.

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 <!--- Coffee Section ----------->
  <div class="row welcome text-center">
     <div class="col-12">
-        <h1 id="Menu">CoffeeseesS</h1>
+        <h1 id="Menu">CoffeeS</h1>
     </div>
 </div>
 
