add new section

--- a/index.html
+++ b/index.html
@@ -234,6 +234,48 @@
 
 </div>
 <hr class="menu-hr">
+<!--- Cake Menu -->
+<div class="container-fluid padding">
+    <div class="row welcome text-center">
+        <div class="col-12">
+            <h1 id="Menu">Cakes</h1>
+        </div>
+    </div>
+
+    <div class="row text-center padding">
+        <div class="col-md-4" >
+            <div class="card" >
+                <img class="card-img-top" src="images/rv.jpeg">
+                <div class="card-body">
+                    <h4 class="card-title">Red Velveat Cake</h4>
+                    <p class="card-text">₱ 500.00</p>
+                    <a class="btn btn-outline-secondary">Add to Cart</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card">
+                <img class="card-img-top" src="images/mc2.jpg">
+                <div class="card-body">
+                    <h4 class="card-title">Chocolate Layered Cake</h4>
+                    <p class="card-text">₱ 650.00</p>
+                    <a class="btn btn-outline-secondary">Add to Cart</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card">
+                <img class="card-img-top" src="images/sc.jpg">
+                <div class="card-body">
+                    <h4 class="card-title">Strawberry Layered Cake</h4>
+                    <p class="card-text">₱ 450.00</p>
+                    <a class="btn btn-outline-secondary">Add to Cart</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <hr>
 <!-- Two Column Section -->
 <div class="container-fluid padding" >
     <div class="row padding" >
