--- a/index.html
+++ b/index.html
@@ -234,21 +234,21 @@
 
 </div>
 <hr class="menu-hr">
-<!--- Cake Menu -->
+<!--- Biscuits and Cookie Menu -->
 <div class="container-fluid padding">
     <div class="row welcome text-center">
         <div class="col-12">
-            <h1 id="Menu">Cakes</h1>
+            <h1 id="Menu">Biscuits and Cookies</h1>
         </div>
     </div>
 
     <div class="row text-center padding">
         <div class="col-md-4" >
             <div class="card" >
-                <img class="card-img-top" src="images/rv.jpeg">
+                <img class="card-img-top" src="images/MarieBiscuit.jpeg">
                 <div class="card-body">
-                    <h4 class="card-title">Red Velveat Cake</h4>
-                    <p class="card-text">₱ 500.00</p>
+                    <h4 class="card-title">Marie Biscuits</h4>
+                    <p class="card-text">₱ 5.00</p>
                     <a class="btn btn-outline-secondary">Add to Cart</a>
                 </div>
             </div>
