--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="script/final.js" type="text/javascript"></script>
 
 
-    <title>Kuma Kuma Cafe!</title>
+    <title>Kuma Kuma Bear Cafe!</title>
 </head>
 <body onload="">
 
