--- a/index.html
+++ b/index.html
@@ -71,28 +71,28 @@
         <div class="carousel-item active">
             <img src="images/cake1.jpg">
             <div class="carousel-caption">
-                <h1 class="display-1">KUMA CAFE</h1>
+                <h1 class="display-1">KUMA KUMA BEAR CAFE</h1>
                 <h3>Wide Variety of Cakes, Coffee, Cupcakes & More...</h3>
             </div>
         </div>
         <div class="carousel-item">
             <img src="images/coffee1.jpg">
             <div class="carousel-caption">
-                <h1 class="display-1">KUMA CAFE</h1>
+                <h1 class="display-1">KUMA KUMA BEAR CAFE</h1>
                 <h3>Wide Variety of Cakes, Coffee, Cupcakes & More...</h3>
             </div>
         </div>
         <div class="carousel-item">
             <img src="images/cake2.jpg">
             <div class="carousel-caption">
-                <h1 class="display-1">KUMA CAFE</h1>
+                <h1 class="display-1">KUMA KUMA BEAR CAFE</h1>
                 <h3>Wide Variety of Cakes, Coffee, Cupcakes & More...</h3>
             </div>
         </div>
         <div class="carousel-item">
             <img src="images/coffee2.jpg">
             <div class="carousel-caption">
-                <h1 class="display-1">KUMA CAFE</h1>
+                <h1 class="display-1">KUMA KUMA BEAR CAFE</h1>
                 <h3>Wide Variety of Cakes, Coffee, Cupcakes & More...</h3>
             </div>
         </div>
