--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <div class="container-fluid padding">
     <div class= "row welcome text-center" id="Menu">
         <div class="col-12">
-            <h1 >Menu</h1>
+            <h1 >Menus</h1>
         </div>
     </div>
 </div>
