Change Strawberry name

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <div class="card">
                 <img class="card-img-top" src="images/sc.jpg">
                 <div class="card-body">
-                    <h4 class="card-title">Strawberry Layered Cake</h4>
+                    <h4 class="card-title">Strawberry ShortCake</h4>
                     <p class="card-text">₱ 450.00</p>
                     <a class="btn btn-outline-secondary">Add to Cart</a>
                 </div>
